<resources>
    <string name="app_name">BeneFit+</string>

    <!-- Login Layout strings -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>i
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login_button">LOGIN</string>
    <string name="signUp_text">Or Sign Up With</string>

    <!-- Create Account Layout strings & Uses some of Login strings-->
    <string name="createAccount_button">Create Account</string>
    <string name="backLogin_text"> ❯ </string>
    <string name="prompt_Username">Enter Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>


    <!-- Bottom Navigation Menu Strings -->
    <string name="menu_gyms">Gyms</string>
    <string name="menu_food">Food</string>
    <string name="menu_empty"> </string>
    <string name="menu_fitness">Fitness</string>
    <string name="menu_profile">Profile</string>

    <!-- Reset Password Fragment Layout Strings -->
    <string name="resetPassword_title">Reset Password?</string>
    <string name="resetPassword_prompt">Enter your Email to receive reset link.</string>
    <string name="resetPassword_yes">Yes</string>
    <string name="resetPassword_back">Back</string>

    <!-- Facebook Login Strings -->
    <string name="facebook_app_id">370648141582272</string>
    <string name="fb_login_protocol_scheme">fb370648141582272</string>
    <string name="facebook_client_token">629db0657f0e801a41c3affada836267</string>

    <!-- Food API search -->
    <string name="food_search_API_key">9uNZgAKO3Hb657GW2aYeIA==6QSUhrgPXxiwypMp</string>
    <!-- Image API search -->
    <string name="image_search_API_key">563492ad6f917000010000013ff13c8084b2462198b8c626c661ea3c</string>
    <!-- Weather API search -->
    <string name="weather_search_API_key">4688280b3f0c44f9995105842220804</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
