<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resetPassword_constraintLayout"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:background="@drawable/background_reset_password"
    tools:context=".resetPasswordFragment">

    <TextView
        android:id="@+id/resetPassword_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resetPassword_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetPassword_yes_button"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner_v2"
        android:text="@string/resetPassword_yes"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetPassword_back_button"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword_enteredEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/resetPassword_back_button"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_v5"
        android:text="@string/resetPassword_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/resetPassword_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword_prompt"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword_title" />

    <EditText
        android:id="@+id/resetPassword_enteredEmail"
        android:layout_width="293dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_corner_v4"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textColor="@color/white"
        android:textColorHint="#B4FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPassword_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword_prompt"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
</androidx.constraintlayout.widget.ConstraintLayout>